navbar-brand and 'Top' link now fade in on landing page; top-link visibility issue fixed on blog pages; update .gitignore to exclude static audio

--- a/portfolio/static/css/blog.css
+++ b/portfolio/static/css/blog.css
@@ -27,6 +27,7 @@ hr {
 }
 
 nav .top-link {
+	display: none;
 	visibility: hidden;
 }
 
